--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,18 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  background-color: azure !important;
+  /* background-color: rgb(222, 221, 250) !important;
+  background-color: linear-gradient(
+    90deg,
+    rgba(222, 221, 250, 1) 0%,
+    rgba(236, 246, 249, 1) 100%
+  ) !important; */
+  background-image: url("../public/wave.svg") !important;
+  background-position: center bottom !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  min-height: 100vh;
 }
 
 * {
@@ -23,4 +30,103 @@ a {
     color: white;
     background: black;
   }
+}
+a {
+  list-style: none;
+  direction: none;
+}
+
+.welcome {
+  -webkit-box-shadow: 0px 0px 33px -7px rgba(172, 173, 179, 1);
+  -moz-box-shadow: 0px 0px 33px -7px rgba(172, 173, 179, 1);
+  box-shadow: 0px 0px 33px -7px rgba(172, 173, 179, 1);
+  border-radius: 20px 20px 20px 20px;
+  background-color: white;
+}
+
+.gradient_background {
+  background: rgb(222, 221, 250);
+  background: linear-gradient(
+    90deg,
+    rgba(222, 221, 250, 1) 0%,
+    rgba(236, 246, 249, 1) 100%
+  );
+}
+
+.setting_img_size {
+  max-width: 50%;
+  max-height: 50%;
+}
+.user_profile_images {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+input:not([type="checkbox"]) {
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 10px #4532ef;
+  color: black;
+}
+textarea {
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 10px #4532ef;
+  color: black;
+}
+
+input:not([type="checkbox"]):focus {
+  box-shadow: 0 0 10px #3434ea;
+  border-color: #4d15f4;
+}
+
+.navbar {
+  background-color: rgb(250, 170, 10);
+}
+
+.navlink:hover {
+  background-color: lightblue;
+  border-radius: 5px;
+}
+
+.friend_list {
+  background: rgb(45, 98, 219);
+  background: linear-gradient(
+    90deg,
+    rgba(45, 98, 219, 1) 0%,
+    rgba(255, 255, 255, 1) 15%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  border-radius: 150px 0px 0px 150px;
+  border-top: 1px solid lightblue;
+  border-bottom: 1px solid lightblue;
+}
+
+.image_shadow {
+  -webkit-box-shadow: 0px 0px 13px 4px rgba(101, 102, 107, 1);
+  -moz-box-shadow: 0px 0px 13px 4px rgba(101, 102, 107, 1);
+  box-shadow: 0px 0px 13px 4px rgba(101, 102, 107, 1);
+}
+
+.profile_wave {
+  background-image: url("../public/wave2.svg") !important;
+  background-position: left !important;
+  background-repeat: no-repeat !important;
+
+  /* min-height: 100vh; */
+}
+.user_wave {
+  background-image: url("../public/wave3.svg") !important;
+  background-position: right !important;
+  background-repeat: no-repeat !important;
+  background-size: cover;
+  /* min-height: 100vh; */
+}
+.people_background {
+  background-image: url("../public/search.svg") !important;
+  background-position: left !important;
+  background-repeat: no-repeat !important;
+  background-size: 35% 35%;
 }
